containers/kubernetes/adminer/adminer.svc.yaml
# --------------------------------------------------------------------
# -- Debugging:
# kubectl describe svc adminer-svc
# kubectl get svc adminer-svc
#
# kubectl logs --selector app=adminer
# kubectl get events --namespace=default
#
#
# -- Access inside cluster:
# http://adminer-svc:8080
#
# -- Access outside cluster:
# -- See adminer.ing.yaml
# --------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  labels:
    app: adminer
    group: db
  name: adminer-svc
  namespace: default

spec:
  ports:
    - port: 8080
      targetPort: 8080

  selector:
    app: adminer

  type: ClusterIP
